--- a/MarkingMenu/MainWindow.xaml
+++ b/MarkingMenu/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Width="1366" Height="768" WindowState="Maximized" WindowStyle="None" ResizeMode="NoResize" >
-    <Grid Name="grid">
+    <Canvas Name="canvas">
         
-    </Grid>
+    </Canvas>
 </Window>
